packages/ui/src/components/editor/Field/Field.module.scss
.field {
  display: flex;
  flex-direction: column;
  gap: 4px;

  &__label {
    font-size: 12px;
    font-weight: 600;
    color: var(--vscode-editor-foreground);
    align-self: flex-start;
  }

  &__info {
    font-size: 12px;
    color: var(--vscode-descriptionForeground);
  }

  input,
  select {
    background-color: var(--vscode-input-background);
    color: var(--vscode-input-foreground);
    border-radius: var(--border-radius-3px);
    padding: var(--padding-4px) var(--padding-6px);
    font-size: var(--font-size-13px);
    border: none;

    &:focus {
      outline: 1px solid var(--vscode-focusBorder);
      outline-offset: -1px;
    }

    &:disabled {
      opacity: 0.5;
    }
  }

  select {
    cursor: pointer;
    border: none;
    padding: var(--padding-4px) var(--padding-2px);
    width: 100%;
  }

  input[type='range'] {
    padding: 0;
    &:focus {
      outline: none;
    }
  }

  textarea {
    background-color: var(--vscode-input-background);
    color: var(--vscode-input-foreground);
    border-radius: var(--border-radius-3px);
    resize: none;
    min-height: 80px;
    overflow: hidden;
    font-family: inherit;
    font-size: var(--font-size-13px);
    padding: var(--padding-5px) var(--padding-6px);
    border: none;

    &:focus {
      outline: 1px solid var(--vscode-focusBorder);
      outline-offset: -1px;
    }
  }
}

